# rustqual

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustqual.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
book/: adapter-parity.md  ai-coding-workflow.md  architecture-rules.md  ci-integration.md  code-reuse.md  coupling-quality.md  function-quality.md  getting-started.md  legacy-adoption.md  module-quality.md  reference-cli.md  reference-configuration.md  reference-output-formats.md  reference-rules.md  reference-suppression.md  test-quality.md
examples/: sample.rs
src/: cli.rs  cli_handlers.rs  findings.rs  lib.rs  scope.rs  watch.rs
src/adapters/: mod.rs
src/analyzer/: classify.rs  mod.rs  types.rs
src/app/: analyze_codebase.rs  architecture.rs  dry_suppressions.rs  exit_gates.rs  metrics.rs  mod.rs  orphan_suppressions.rs  pipeline.rs  secondary.rs  setup.rs  structural_metrics.rs  suppression_windows.rs  tq_metrics.rs  warnings.rs
src/architecture/: violation.rs
src/cli/: explain.rs  mod.rs
src/config/: architecture.rs  init.rs  mod.rs  sections.rs
src/coupling/: graph.rs  metrics.rs  mod.rs  sdp.rs
src/domain/: dimension.rs  finding.rs  mod.rs  score.rs  severity.rs  source_unit.rs  suppression.rs
src/dry/: call_targets.rs  dead_code.rs  fragments.rs  functions.rs  match_patterns.rs  mod.rs  wildcards.rs
src/pipeline/: discovery.rs  dry_suppressions.rs  metrics.rs  mod.rs  structural_metrics.rs  tq_metrics.rs  warnings.rs
src/ports/: dimension_analyzer.rs  mod.rs  (+3 more)
tests/: integration.rs  showcase_iosp.rs
(+459 files in other folders)
