[package]
name = "rustqual"
version = "0.4.1"
edition = "2021"
description = "Comprehensive Rust code quality analyzer — six dimensions: Complexity, Coupling, DRY, IOSP, SRP, Test Quality"
license = "MIT"
repository = "https://github.com/SaschaOnTour/rustqual"
homepage = "https://github.com/SaschaOnTour/rustqual"
documentation = "https://docs.rs/rustqual"
authors = ["Sascha"]
keywords = ["rust", "static-analysis", "code-quality", "linter", "complexity"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
default-run = "rustqual"
exclude = ["docs/*", "prd-*.md", ".github/*", ".claude/*"]

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
globset = "0.4"
rayon = "1"
clap_complete = "4"
derive_more = { version = "1", features = ["display"] }
notify = "6"

[dev-dependencies]
tempfile = "3"
